# aleo-wallet-test

./: package-lock.json  package.json
src/: App.tsx  index.tsx  transfer.tsx
vm-server/: Cargo.toml
vm-server/src/: main.rs
wasm-lib/: Cargo.toml  build.rs
wasm-lib/src/: lib.rs  proving_keys.rs  records.rs  transfer.rs  utils.rs  verifying_keys.rs  vm.rs
