[package]
name = "wasm-lib"
version = "0.1.0"
authors = ["IronC <apehole@163.com>"]
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[build-dependencies.snarkvm-algorithms]
path = "../../../snarkVM/algorithms"

[build-dependencies.snarkvm-console-network]
path = "../../../snarkVM/console/network"

[build-dependencies.snarkvm-synthesizer]
path = "../../../snarkVM/synthesizer"

[build-dependencies]
indexmap = "1.9"
bincode = "1.3"

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["Headers", "Request", "RequestInit", "Response", "Window", "console", "RequestMode"] }
#snarkvm-console-program = { version = "0.9.16" }
#snarkvm-console-types = "0.9.16"
#snarkvm-console-account = { version = "0.9.16" }
#snarkvm-console-network = { version = "0.9.16", features = ["wasm"] }
#snarkvm-algorithms = { version = "0.9.16", features = ["wasm"] }
#snarkvm-console-network-environment = "0.9.16"
#snarkvm-utilities = "0.9.16"
#snarkvm-synthesizer = { version = "0.9.16", features = ["wasm"] }
#snarkvm-parameters = { version = "0.9.16", features = ["wasm"] }
aleo-std = "0.1.15"
tracing = "0.1.37"
anyhow = { version = "1.0.70" }
parking_lot = "0.12"
serde = "1"
serde_json = "1"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
bincode = "1.3"
lazy_static = "1.4"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
once_cell = "1.17.1"

[dependencies.rand]
version = "0.8"
default-features = false


[dependencies.snarkvm-console-program]
path = "../../../snarkVM/console/program"


[dependencies.snarkvm-console-types]
path = "../../../snarkVM/console/types"

[dependencies.snarkvm-console-account]
path = "../../../snarkVM/console/account"

[dependencies.snarkvm-console-network]
path = "../../../snarkVM/console/network"
features = ["wasm"]

[dependencies.snarkvm-algorithms]
path = "../../../snarkVM/algorithms"
features = ["wasm"]

[dependencies.snarkvm-utilities]
path = "../../../snarkVM/utilities"

[dependencies.snarkvm-synthesizer]
path = "../../../snarkVM/synthesizer"
features = ["wasm"]

[dependencies.snarkvm-parameters]
path = "../../../snarkVM/parameters"
features = ["wasm"]

[dependencies.indexmap]
version = "1.9"
features = ["serde", "rayon"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
